@@ -1,4 +1,4 @@
-package fortuna.bettingsource.eighteighteight;
+package fortuna.bettingsource.stake;
 
 import fortuna.bettingsource.BetOfferSource;
 import fortuna.models.offer.ThreeWayBetOffer;
@@ -10,47 +10,48 @@ import lombok.experimental.SuperBuilder;
 import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
+import org.openqa.selenium.By;
+import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.WebElement;
 
 import java.math.BigDecimal;
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
-import static fortuna.models.source.Bookmaker.EIGHTEIGHTEIGHT;
+import static fortuna.models.source.Bookmaker.STAKE;
 
 @Data
 @EqualsAndHashCode(callSuper = true)
 @ToString(callSuper = true)
 @SuperBuilder
 @Slf4j
-public class EightEightEightThreeWayBetOfferSource extends BetOfferSource<ThreeWayBetOffer> {
+public class StakeThreeWayBetOfferSource extends BetOfferSource<ThreeWayBetOffer> {
 
     @Override
     public List<BetOfferSourceStep<ThreeWayBetOffer>> steps() {
-        return Collections.singletonList(
+        return List.of(
                 BetOfferSourceStep.<ThreeWayBetOffer>builder()
-                        .preDelay(Duration.of(2, ChronoUnit.SECONDS))
+                        .preDelay(Duration.of(1, ChronoUnit.SECONDS))
                         .extractor(this::extractOffers)
                         .build()
         );
     }
-
     public List<ThreeWayBetOffer> extractOffers(String html) {
         Document doc = Jsoup.parse(html);
 
-        return doc.select("div.bet-card").stream().map(
+        return doc.select("div.fixture-preview").stream().map(
                 e -> {
-                    List<String> participants = processParticipants(e.select("span.event-description__competitor-text"), log);
+                    List<String> participants = processParticipants(e.select("span.content-or-loader"), log);
 
-                    if (e.selectFirst("span.bb-score-board__score-field") != null) {
+                    if (e.selectFirst("div.score-wrapper") != null) {
                         log.debug("Match {} for source {} is ongoing.", participants, getBettingSourceType());
                         return null;
                     }
 
-                    List<BigDecimal> odds = processOdds(e.select("span.bb-sport-event__selection"), log);
+                    List<BigDecimal> odds = processOdds(e.select("div.odds.svelte-bbfzn7 > span"), log);
 
                     return processThreeWayBetOffer(participants, odds, null, log).orElse(null);
                 }
@@ -60,6 +61,6 @@ public class EightEightEightThreeWayBetOfferSource extends BetOfferSource<ThreeW
 
     @Override
     public BettingSourceType getBettingSourceType() {
-        return EIGHTEIGHTEIGHT;
+        return STAKE;
     }
 }
